# travel-agent

./: .gitignore  README.md
backend/: create_venue_vector_store.py  mcp_config.json  mcp_server.py  pyproject.toml  reservation_tools.py  web_server.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/components/: ChatPage.tsx
